# xzqh-crawler

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
docs/: design.md  requirements.md  tasks.md
src/xzqh_crawler/: __init__.py  __main__.py  cli.py  client.py  config.py  crawler.py  database.py  models.py  progress.py  utils.py
tests/: test_client.py  test_crawler.py  test_database.py  test_integration.py  test_models.py
