[project]
name = "xzqh-crawler"
version = "0.1.0"
description = "行政区划代码爬虫，用于从民政部网站获取行政区划数据"
authors = [
    {name = "ByteColtX", email = "umk@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.12.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/ByteColtX/xzqh-crawler"
Repository = "https://github.com/ByteColtX/xzqh-crawler"
Issues = "https://github.com/ByteColtX/xzqh-crawler/issues"

[project.scripts]
xzqh = "xzqh_crawler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "D",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "D415",
]
per-file-ignores = {"tests/*.py" = ["D"]}

[tool.ruff.lint.isort]
known-first-party = ["xzqh_crawler"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 真实网络集成测试",
]
